# techmod

./: .gitignore  README.md  gradle.properties
gradle/scripts/: extra.gradle
native/: CMakeLists.txt  Makefile  README.md  build.sh
native/include/: techmod_NativeCore.h
native/src/: techmod.c
src/main/java/com/example/techmod/: TechMod.java
src/main/java/com/example/techmod/bridge/: NativeCore.java
